# aidd-intern

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirement.md  setup.py  skills-lock.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-review.yml  claude.yml
.qoder/plans/: Rust_Performance_Optimization_b406e52c.md  Rust可选优化零门槛集成_e03b0abd.md
agent/: __init__.py  config.py  main.py
agent/context_manager/: manager.py
agent/core/: __init__.py  agent_loop.py  doctor.py  doom_loop.py  hf_tokens.py  hub_artifacts.py  knowledge_wiki.py  llm_params.py  memory.py  memu.py  model_catalog.py  model_switcher.py  openai_compatible_models.py  redact.py  reflector.py  session.py  session_persistence.py  session_resume.py  session_uploader.py  skill_extractor.py  tools.py  version_check.py
agent/messaging/: gateway.py
agent/prompts/: system_prompt_v3.yaml
agent/roles/: __init__.py  registry.py
agent/sft/: tagger.py
agent/tools/: __init__.py  aidd_bio_tool.py  aidd_prepare_tool.py  binder_design_tool.py  docs_tools.py  jobs_tool.py  literature_lookup_tool.py  (+6 more)
aidd_intern_core/: __init__.py
backend/: __init__.py  dataset_uploads.py  dependencies.py  kpis_scheduler.py  main.py  session_manager.py  start.sh
configs/: cli_agent_config.json  frontend_agent_config.json  models.json
docs/: aidd-binder-workflow-guide.md  aidd-intern-architecture-harness-guide.md  context-management-guide.md  llm-provider-guide.md  multi-agent-collaboration-guide.md  pd-l1-binder-design-report.md  protein-design-domain-pack-guide.md  protein-design-optimization-roadmap.md  protein-design-workflow-guide.md  step.md  tencentdb-agent-memory-guide.md  tool-chain-guide.md
fixtures/: prompts.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
rust_core/: Cargo.toml
scripts/: bootstrap-source.sh  bootstrap_eval_data.py  build_kpis.py  build_sft.py  dev.sh  install-local-launcher.sh  monitor-binder-outputs.sh  prioritize_backlog.py  pxdesign_mcp_server.py  run-proteinmcp-container.sh  run-proteinmcp-local.sh  setup-proteinmcp-local.sh  setup-rust.sh  sweep_orphan_sandboxes.py  update-local.sh
src/: cli.ts  index.ts  lib.rs  manifest.ts
static/: app.js  index.html  styles.css
(+119 files in other folders)
