[package]
name = "aidd_intern_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.10", features = ["std"] }
md-5 = "0.10"
once_cell = "1.19"
unicode-width = "0.2"
tempfile = "3.8"
# Parallel processing and performance optimization
rayon = "1.8"
num_cpus = "1.16"
# Memory optimization
cow-utils = "0.1.3"
